# practica-observabilidad-llm

./: .gitignore  README.md  app.py  main.py  pyproject.toml
agents/: code_agent.py  guardrail_agent.py  rag_agent.py  researcher_agent.py  router.py
data/: knowledge_base.py  knowledge_graph.json
graph/: workflow.py
prompts/: code_agent_prompt.py  rag_prompt.py  researcher_prompt.py  router_prompt.py
rag/: graph_rag.py  retriever.py
scripts/: build_knowledge_graph.py  build_vector_db.py  evaluate_dataset.py  evaluate_triad.py
