[project]
name = "practica-observabilidad-llm"
version = "0.1.0"
description = "Multi-agent system with LangSmith observability for presentation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.3.0",
    "jupyter>=1.1.1",
    "openai>=1.50.0",
    "python-dotenv>=1.2.2",
    "rich>=13.0.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.3.0",
    "langchain-chroma>=0.1.0",
    "langchain-community>=0.3.0",
    "langsmith>=0.2.0",
    "langgraph>=0.2.0",
    "chromadb>=0.5.0",
    "networkx>=3.0",
    "streamlit>=1.58.0",
    "matplotlib>=3.10.9",
]
